[package]
name = "voting"
version = "0.0.1"
description = "Voting program written in Rust"
authors = ["Bill Lu <bill.lu@aptimasolutions.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9"
solana-program = "=1.7.9"
thiserror = "1.0"

[lib]
name = "voting"
crate-type = ["cdylib", "lib"]